@startuml
class ProjectManager {
    + projectIsOpen : bool
    + CreateProjectWithUI() : void
    + GetProjectPaths() : List<string>
    + GetProjectNames() : List<string>
    + GetProject(projectDirectory:string) : Project
    + CreateProject(name:string, spriteFilePath:string, openProject:bool) : Project
    + SaveCurrent() : void
    + SaveAs() : void
    + ExportCurrent(mode:int) : void
    + Export(p:RuntimeProject, mode:int) : bool
    + OpenProject(p:Project) : void
    + GetOpenProject() : RuntimeProject
}
class "Singleton`1"<T> {
}
"Singleton`1" "<ProjectManager>" <|-- ProjectManager
ProjectManager --> "shaderSettingsManager" ProjectShaderSettingsManager
ProjectManager --> "menuManager" MenuManager
ProjectManager --> "newProjectMenu" Menu
ProjectManager --> "saveAsModal" Transform
ProjectManager --> "saveAsModalInput" TMP_InputField
ProjectManager --> "projectRefreshEvent" Action
@enduml
